ndb - bug#38592 - handle epoll_create returning ENOSYS   by falling back on select